--- a/client/src/app/stock/stock.component.html
+++ b/client/src/app/stock/stock.component.html
@@ -17,5 +17,25 @@
             <td class="info-table">Price</td>
             <td class="font-normal">{{stock.price}}</td>
         </tr>
+        <tr class="border-solid border-2 border-goldish text-center">
+            <th class="border-solid border-2 border-goldish">Currency</th>
+            <th>{{stock.currency}}</th>
+        </tr>
+        <tr class="border-solid border-2 border-goldish text-center">
+            <td class="border-solid border-2 border-goldish">Exchange Name</td>
+            <td>{{stock.exchangeName}}</td>
+        </tr>
+        <tr class="border-solid border-2 border-goldish text-center">
+            <th class="border-solid border-2 border-goldish">Exchange Timezone Name</th>
+            <th>{{stock.exchangeTimezoneName}}</th>
+        </tr>
+        <tr class="border-solid border-2 border-goldish text-center">
+            <td class="border-solid border-2 border-goldish">Instrument Type</td>
+            <td>{{stock.instrumentType}}</td>
+        </tr>
+        <tr class="border-solid border-2 border-goldish text-center">
+            <td class="border-solid border-2 border-goldish">Previous Close</td>
+            <td>{{stock.previousClose}}</td>
+        </tr>
     </table>    
 </div>
